Completed Lesson 6 homework part A.